# harbor

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  qemu-build.sh
docs/: minimal-mmio-register-file.md  qemu-linux-bringup-todo.md  qemu-riscv-virt.md  sail-riscv-integration-todo.md
examples/linux/: .gitignore  README.md
examples/linux/buildroot/: README.md  build.sh  buildroot.version  fetch.sh  riscv64_qemu_virt_defconfig  run.sh
examples/riscv/common/: runtime.c  runtime.h  start.S
examples/riscv/hello/: build.sh  main.c  run.sh
examples/riscv/minimal/: CMakeLists.txt  build.sh  linker.ld  run.sh  start.S
examples/riscv/systemc-mmio/: build.sh  main.c  run.sh
include/harbor/mmio/: register_file.h  register_file_map.h  transaction.h
include/harbor/qemu/: mmio_adapter.h
include/harbor/systemc/: runtime.h  single_register.h
include/rviss/: rviss.h
include/rviss/state/: architectural_state.h
scripts/: qemu-install-harbor-sources.sh
src/core/: decode_type_ci.cc  decode_type_ciw.cc  decode_type_cj.cc  decode_type_cr.cc  decode_type_cs.cc  decode_type_r.cc  decoder.cc
src/mmio/: register_file.cpp  transaction.cpp
src/qemu/: harbor_register_file.c  mmio_adapter.cpp  mmio_device.h  systemc_mmio_adapter.cpp
src/state/: architectural_state.cc
src/systemc/: runtime.cpp  single_register.cpp
tests/: cleanup.sh
tests/integration/: boot-buildroot-linux.sh  ensure-examples-docker-image.sh  run-all.sh  run-riscv-examples.sh
tests/unit/: architectural_state_test.cc  decode_type_amo_test.cc  decode_type_b_test.cc  decode_type_ca_test.cc  decode_type_cb_test.cc  decode_type_ci_test.cc  decode_type_ciw_test.cc  decode_type_cj_test.cc  decode_type_cl_test.cc  decode_type_cr_test.cc  decode_type_cs_test.cc  decode_type_css_test.cc  decode_type_r_test.cc  mmio_transaction_test.cpp  qemu_systemc_adapter_test.cpp  register_file_test.cpp  run.sh  systemc_single_register_test.cpp
